fix manifest path for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="description" content="Master Al Brooks' 607 price action trading abbreviations through interactive category sorting">
 <title>Brooks Term Sort</title>
-<link rel="manifest" href="manifest.json">
+<link rel="manifest" href="/al-brooks-pa-terms-trainer/manifest.json">
 <link rel="icon" href="icon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="icon-192.png">
 <style>
