--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="description" content="Master Al Brooks' 607 price action trading abbreviations through interactive category sorting">
-<title>Brooks Term Sort</title>
-<link rel="manifest" href="/al-brooks-pa-terms-trainer/manifest.json">
-<link rel="icon" href="icon.svg" type="image/svg+xml">
+<title>Al Brooks Price Action Terminologies</title>
+<link rel="icon" href="/al-brooks-pa-terms-trainer/icon.svg" type="image/svg+xml">
+<link rel="apple-touch-icon" href="/al-brooks-pa-terms-trainer/icon-192.png">
 <link rel="apple-touch-icon" href="icon-192.png">
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
