rename app to Al Brooks PA Terms Quiz
- Update title and header in index.html
- Update manifest name, short_name, description
- Final branding: Al Brooks PA Terms Quiz

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="description" content="Master Al Brooks' 607 price action trading abbreviations through interactive category sorting">
-<title>Al Brooks Price Action Terminologies</title>
+<title>Al Brooks PA Terms Quiz</title>
 <link rel="icon" href="/al-brooks-pa-terms-trainer/icon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/al-brooks-pa-terms-trainer/icon-192.png">
 <link rel="apple-touch-icon" href="icon-192.png">
@@ -1103,7 +1103,7 @@ function App() {
         // Header
         e("div", { style: { textAlign: "center", marginBottom: 16 } },
           e("div", { style: { fontSize: 10, textTransform: "uppercase", letterSpacing: 3, color: "rgba(255,255,255,0.3)", marginBottom: 6 } }, "Al Brooks Price Action"),
-          e("h1", { style: { fontSize: 28, fontWeight: 800, margin: "0 0 4px", background: "linear-gradient(135deg, #3b82f6, #a855f7)", WebkitBackgroundClip: "text", WebkitTextFillColor: "transparent" } }, "TERM SORT"),
+          e("h1", { style: { fontSize: 28, fontWeight: 800, margin: "0 0 4px", background: "linear-gradient(135deg, #3b82f6, #a855f7)", WebkitBackgroundClip: "text", WebkitTextFillColor: "transparent" } }, "AL BROOKS PA TERMS QUIZ"),
           e("p", { style: { color: "rgba(255,255,255,0.3)", fontSize: 11, margin: 0 } }, totalG + " groups \u00b7 " + totalT + " terms \u00b7 " + mastered + "/" + totalG + " mastered")),
         // Top buttons
         e("div", { style: { display: "flex", gap: 8, marginBottom: 18 } },
